Fix 8.19 precision clamp
Co-authored-by: Cursor <cursoragent@cursor.com>